Fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -746,7 +746,7 @@ hr{
 	.post-meta {
 		border-top: 2px solid #e5e5e5; 
 		border-bottom: 2px solid #e5e5e5; 
-		margin-left: 80px;
+		margin-left: 30px;
 		padding: 10px; 
 	}
 
